Fixed bug #43027 (Declare cause fatal error)